# tensacode

./: .directory  .gitmodules  README.md  TODO  old-README.md  pyproject.toml
tensacode/python/: README.md  pyproject.toml
tensacode/python/.old/old/: tracing.py
tensacode/python/.old/old/prompting/: _base.py
tensacode/python/.old/old1/models/: model.py
tensacode/python/.old/old1/operations/: decode.py  operation.py
tensacode/python/.old/old1/prompting/: call.py  decide.py  prompt.py
tensacode/python/.old/old1/utils/: export_helpers.py
tensacode/python/.old/old2/_internal/: assertions.py
tensacode/python/.old/old2/backend/: forefront.py  model.py  openai.py  tasks.py
tensacode/python/.old/old2/models/: llm_model.py
tensacode/python/.old/old2/patterns/: factory.py
tensacode/python/.old/old2/utils/: annotations.py  ledger.py  reward_extractor.py  testing.py
tensacode/python/.old/old3/: pyproject.toml.old
tensacode/python/.old/old3/_base/: __init__.py  base_model.py
tensacode/python/.old/old3/_external/: inspect_mate.py
tensacode/python/.old/old3/_internal/: context_managed_singleton_proxy.py  decorate_all_methods.py
tensacode/python/.old/old3/_text/: __init__.py
tensacode/python/.old/old3/_vector/: __init__.py
tensacode/python/.old/old3/utils/: misc.py
tensacode/python/.old/old4/models/: default.py
tensacode/python/.old/old4/patterns/: singleton.py
tensacode/python/old/: base_engine.py  programming.py  tracing.py
tensacode/python/old/models/: model.py
tensacode/python/old/operations/: create.py  execute.py  get.py  operation.py
tensacode/python/old/prompting/: decide.py  oracle.py  select.py  sort.py
tensacode/python/tensacode/: __init__.py
tensacode/python/tensacode/base/: base_engine.py  control_flow.py  engine.py  engine_base.py  old_engine.py
tensacode/python/tensacode/base/mixins/: has_choice.py  has_combine.py  has_correct.py  has_create.py  has_decide.py  has_decode.py  has_encode.py  has_modify.py  has_predict.py  has_query.py  has_retrieve.py  has_run.py  has_semantic_transfer.py  has_similarity.py  has_split.py  has_store.py  has_style_transfer.py  mixin_base.py  supports_choice.py  supports_combine.py  supports_correct.py  supports_create.py  supports_decide.py  supports_decode.py  supports_encode.py  supports_modify.py  supports_predict.py  supports_query.py  supports_retrieve.py  supports_run.py  supports_semantic_transfer.py  (+4 more)
tensacode/python/tensacode/evo/: evo_engine.py
tensacode/python/tensacode/llm/: llm_engine.py  llm_engine_base.py
tensacode/python/tensacode/llm_engine/: base_llm_engine.py  llm_engine.py
tensacode/python/tensacode/mllm/: mllm_engine_base.py
tensacode/python/tensacode/nn/: nn_engine.py
tensacode/python/tensacode/utils/: decorators.py  internal_types.py  misc.py  oo.py  repr.py  string.py  string0.py  types.py  user_types.py
(+163 files in other folders)
