[tool.poetry]
name = "tensorcode"
version = "0.0.1"
description = "Machine Learning + Software Engineering + Runtime Introspection and Code Generation = Programming 2.0"
authors = ["Jacob Valdez <jacob.valdez@limboid.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
openai = "^0.26.0"
black = "^22.12.0"
ivy-core = "^1.1.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
