[tool.poetry]
name = "tensacode"
version = "0.1.0"
description = "TensaCode: Neural Networks + Language Models + Introspection = Programming 2.0"
authors = ["Jacob Valdez <jacob.valdez@tensaco.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.308"
jinja2 = "^3.1.2"
ivy = "^0.0.0"
typing-extensions = "^4.7.1"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
