[tool.poetry]
name = "tensacode"
version = "0.1.0"
description = "TensaCode: Neural Networks + Language Models + Introspection = Programming 2.0"
authors = ["Jacob Valdez <jacob.valdez@tensaco.ai>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tensacode" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
langchain = "^0.0.335"
jinja2 = "^3.1.2"
black = "^23.11.0"
typingx = "^0.6.0"
ivy = {version = "^0.0.4.0", extras = ["nn"]}

[tool.poetry.extras]
tensorcode_llm = ["tensorcode.llm"]
tensacode_nn = ["tensacode.nn"]
tensacode_evo = ["tensacode.evo"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
